Fix DictionaryValue leak in component_loader.cc

ComponentLoader::GetExtensionID() used to leak |manifest|, but this
function was unused, so removed it.

Component::Add(DictionaryValue*,FilePath&,bool) also leaks DictionaryValue
when it bails out early.

BUG=666153

Review-Url: https://codereview.chromium.org/2504333003
Cr-Commit-Position: refs/heads/master@{#433036}

Former-commit-id: f4e5cdb1ac9b339725dae67d5f6af9df8c5fe6bb